--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tn-reactive",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "description": "",
   "keywords": [],
   "main": "dist/index.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:JawadAhbab/tn-reactive.git"
+    "url": "https://github.com/JawadAhbab/tn-reactive.git"
   },
   "author": "Turnova",
   "license": "MIT",
