--- a/package.json
+++ b/package.json
@@ -1,11 +1,56 @@
 {
   "name": "tn-reactive",
-  "version": "7.1.0",
+  "version": "7.2.0",
   "description": " ",
   "keywords": [],
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/index.cjs",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.mjs"
+    },
+    "./useReacnull": {
+      "types": "./dist/hooks/useReacnull.d.ts",
+      "require": "./dist/hooks/useReacnull.cjs",
+      "default": "./dist/hooks/useReacnull.mjs"
+    },
+    "./useReacnullEvent": {
+      "types": "./dist/hooks/useReacnullEvent.d.ts",
+      "require": "./dist/hooks/useReacnullEvent.cjs",
+      "default": "./dist/hooks/useReacnullEvent.mjs"
+    },
+    "./useReacnullState": {
+      "types": "./dist/hooks/useReacnullState.d.ts",
+      "require": "./dist/hooks/useReacnullState.cjs",
+      "default": "./dist/hooks/useReacnullState.mjs"
+    },
+    "./useReacnullUpdate": {
+      "types": "./dist/hooks/useReacnullUpdate.d.ts",
+      "require": "./dist/hooks/useReacnullUpdate.cjs",
+      "default": "./dist/hooks/useReacnullUpdate.mjs"
+    },
+    "./useReactive": {
+      "types": "./dist/hooks/useReactive.d.ts",
+      "require": "./dist/hooks/useReactive.cjs",
+      "default": "./dist/hooks/useReactive.mjs"
+    },
+    "./useReactiveEvent": {
+      "types": "./dist/hooks/useReactiveEvent.d.ts",
+      "require": "./dist/hooks/useReactiveEvent.cjs",
+      "default": "./dist/hooks/useReactiveEvent.mjs"
+    },
+    "./useReactiveState": {
+      "types": "./dist/hooks/useReactiveState.d.ts",
+      "require": "./dist/hooks/useReactiveState.cjs",
+      "default": "./dist/hooks/useReactiveState.mjs"
+    },
+    "./useReactiveUpdate": {
+      "types": "./dist/hooks/useReactiveUpdate.d.ts",
+      "require": "./dist/hooks/useReactiveUpdate.cjs",
+      "default": "./dist/hooks/useReactiveUpdate.mjs"
+    }
+  },
   "scripts": {
     "Serve": "parcel .dev/parcel/index.html --out-dir .dev/parcel/dist --cache-dir .dev/parcel/cache --open",
     "Build": "rimraf dist && rollup -c",
